--- a/src/main/resources/assets/moreore/lang/de_de.json
+++ b/src/main/resources/assets/moreore/lang/de_de.json
@@ -10,29 +10,27 @@
 	"item.moreore.emerald_shovel": "Smaragd Schaufel",
 	"item.moreore.emerald_sword": "Smaragd  Schwert",
 	"item.moreore.rainbow_sword": "Regenenbogen Schwert",
-	"itemGroup.tools": "Werkzeuge",
-    "item.moreore.rubin_shovel": "Rubin Schaufel",
-    "item.moreore.rubin_sword": "Rubin Schwert",
-    "item.moreore.rubin_hoe": "Rubin Hacke",
-    "item.moreore.rubin_pickaxe": "Rubin Spitzhacke",
-    "item.moreore.rubin_axe": "Rubin Axt",
-    "item.moreore.saphir_shovel": "Saphir Schaufel",
-    "item.moreore.saphir_sword": "Saphir Schwert",
-    "item.moreore.saphir_hoe": "Saphir Hacke",
-    "item.moreore.saphir_pickaxe": "Saphir Spitzhacke",
-    "item.moreore.saphir_axe": "Saphir Axt",
-    "item.moreore.rainbow_shovel": "Regenbogen Schaufel",
-    "item.moreore.rainbow_hoe": "Regenbogen Hacke",
-    "item.moreore.rainbow_pickaxe": "Regenbogen Spitzhacke",
-    "item.moreore.rainbow_axe": "Regenbogen Axt",
-	
+	"item.moreore.rubin_shovel": "Rubin Schaufel",
+	"item.moreore.rubin_sword": "Rubin Schwert",
+	"item.moreore.rubin_hoe": "Rubin Hacke",
+	"item.moreore.rubin_pickaxe": "Rubin Spitzhacke",
+	"item.moreore.rubin_axe": "Rubin Axt",
+	"item.moreore.saphir_shovel": "Saphir Schaufel",
+	"item.moreore.saphir_sword": "Saphir Schwert",
+	"item.moreore.saphir_hoe": "Saphir Hacke",
+	"item.moreore.saphir_pickaxe": "Saphir Spitzhacke",
+	"item.moreore.saphir_axe": "Saphir Axt",
+	"item.moreore.rainbow_shovel": "Regenbogen Schaufel",
+	"item.moreore.rainbow_hoe": "Regenbogen Hacke",
+	"item.moreore.rainbow_pickaxe": "Regenbogen Spitzhacke",
+	"item.moreore.rainbow_axe": "Regenbogen Axt",
 	"block.moreore.silver_ore": "Silber Erz",
 	"item.moreore.silver_ore": "Silber Erz",
 	"item.moreore.silver_ingot": "Silber Barren",
 	"item.moreore.silver_logs": "Silber Baum",
 	"block.moreore.silver_logs": "Silber Baum",
-    "item.moreore.stripped_silver_logs": "Endrindettes Silber Stamm",
-    "block.moreore.stripped_silver_logs": "Endrindettes Silber Stamm",
+	"item.moreore.stripped_silver_logs": "Endrindettes Silber Stamm",
+	"block.moreore.stripped_silver_logs": "Endrindettes Silber Stamm",
 	"item.moreore.silver_leaves": "Silber Baum Blätter",
 	"block.moreore.silver_leaves": "Silber Baum Blätter",
 	"item.moreore.silver_planks": "Silber Planken",
@@ -45,6 +43,7 @@
 	"block.moreore.glow_blue_block": "Blauer Leuchtblock",
 	"item.moreore.banana": "Banane",
 	"block.moreore.banana": "Banane",
+	"item.moreore.banana_seed": "Bananen Samen",
 	"item.moreore.alexandrit_block": "Alexandrit Block",
 	"block.moreore.alexandrit_block": "Alexandrit Block",
 	"item.moreore.alexandrit": "Alexandrit",
@@ -74,68 +73,63 @@
 	"block.moreore.gold_leaves": "Gold Blätter",
 	"item.moreore.gold_saplings": "Gold Setzling",
 	"block.moreore.gold_saplings": "Gold Setzling",
-    "item.moreore.silver_wall": "Silber Wand",
-    "block.moreore.silver_wall": "Silber Wand",
-    "item.moreore.silver_trapdoor": "Silber Falltür",
-    "block.moreore.silver_trapdoor": "Silber Falltür",
-    "item.moreore.silver_fence_gate": "Silber Zaun-Tor",
-    "block.moreore.silver_fence_gate": "Silber Zaun-Tor",
-    "item.moreore.ice_leaves": "Eis Blätter",
-    "block.moreore.ice_leaves": "Eis Blätter",
-    "item.moreore.ice_saplings": "Eis Setzling",
-    "block.moreore.ice_saplings": "Eis Setzling",
-    "item.moreore.silver_door": "Silber Tür",
-    "block.moreore.silver_door": "Silber Tür",
-    "item.moreore.glass_door": "Glass Tür",
-    "block.moreore.glass_door": "Glass Tür",
-    "item.moreore.rubin_block": "Rubin Block",
-    "block.moreore.rubin_block": "Rubin Block",
-    "item.moreore.saphir_block": "Saphir Block",
-    "block.moreore.saphir_block": "Saphir Block",
-    "item.moreore.rubin_ore": "Rubin Erz",
-    "block.moreore.rubin_ore": "Rubin Erz",
-    "item.moreore.saphir_ore": "Saphir Erz ",
-    "block.moreore.saphir_ore": "Saphir Erz",
-    "item.moreore.saphir": "Saphir",
-    "item.moreore.rubin": "Rubin",
-    "item.moreore.rubin_boots": "Rubin Schuhe",
-    "item.moreore.rubin_chestplate": "Rubin Brustplatte",
-    "item.moreore.rubin_helmet": "Rubin Helm",
-    "item.moreore.rubin_leggins": "Rubin Hose",
-    "item.moreore.saphir_boots": "Saphir Schuhe",
-    "item.moreore.saphir_chestplate": "Saphir Brustplatte",
-    "item.moreore.saphir_helmet": "Saphir Helm",
-    "item.moreore.saphir_leggins": "Saphir Hose",
-    "item.moreore.rainbow_boots": "Regenbogen Schuhe",
-    "item.moreore.rainbow_chestplate": "Regenbogen Brustplatte",
-    "item.moreore.rainbow_helmet": "Regenbogen Helm",
-    "item.moreore.rainbow_leggins": "Regenbogen Hose",
-    "item.moreore.beamer": "Beamer",
-    "block.moreore.beamer": "Beamer",
-    "item.moreore.village_guardian_spawnegg": "Dorfbewohner Wächter Spawnei",
-    "item.moreore.squirrel_spawnegg": "Eichhörnchen Spawnei",
-    "item.moreore.patrolpoint": "Kontrolpunkt",
-    "block.moreore.patrolpoint": "Kontrolpunkt",
-    "item.moreore.silver_wood_button": "Silber Holz Knopf",
-    "block.moreore.silver_wood_button": "Silber Holz Knopf",
-    "item.moreore.letuce": "Salat",
-    "block.moreore.letuce": "Salat Samen",
-    "item.moreore.letuce_seed": "Salat Samen",
-    "block.moreore.nut_bush_block": "Nuss Busch",
-    "item.moreore.nut_bush_block": "Nuss Busch",
-    "item.moreore.nut": "Nüsse",
-
-	"itemGroup.mineralic": "Mineralien",
-	"itemGroup.biologic": "Biologisch",
-
+	"item.moreore.silver_wall": "Silber Wand",
+	"block.moreore.silver_wall": "Silber Wand",
+	"item.moreore.silver_trapdoor": "Silber Falltür",
+	"block.moreore.silver_trapdoor": "Silber Falltür",
+	"item.moreore.silver_fence_gate": "Silber Zaun-Tor",
+	"block.moreore.silver_fence_gate": "Silber Zaun-Tor",
+	"item.moreore.ice_leaves": "Eis Blätter",
+	"block.moreore.ice_leaves": "Eis Blätter",
+	"item.moreore.ice_saplings": "Eis Setzling",
+	"block.moreore.ice_saplings": "Eis Setzling",
+	"item.moreore.silver_door": "Silber Tür",
+	"block.moreore.silver_door": "Silber Tür",
+	"item.moreore.glass_door": "Glass Tür",
+	"block.moreore.glass_door": "Glass Tür",
+	"item.moreore.rubin_block": "Rubin Block",
+	"block.moreore.rubin_block": "Rubin Block",
+	"item.moreore.saphir_block": "Saphir Block",
+	"block.moreore.saphir_block": "Saphir Block",
+	"item.moreore.rubin_ore": "Rubin Erz",
+	"block.moreore.rubin_ore": "Rubin Erz",
+	"item.moreore.saphir_ore": "Saphir Erz ",
+	"block.moreore.saphir_ore": "Saphir Erz",
+	"item.moreore.saphir": "Saphir",
+	"item.moreore.rubin": "Rubin",
+	"item.moreore.rubin_boots": "Rubin Schuhe",
+	"item.moreore.rubin_chestplate": "Rubin Brustplatte",
+	"item.moreore.rubin_helmet": "Rubin Helm",
+	"item.moreore.rubin_leggins": "Rubin Hose",
+	"item.moreore.saphir_boots": "Saphir Schuhe",
+	"item.moreore.saphir_chestplate": "Saphir Brustplatte",
+	"item.moreore.saphir_helmet": "Saphir Helm",
+	"item.moreore.saphir_leggins": "Saphir Hose",
+	"item.moreore.rainbow_boots": "Regenbogen Schuhe",
+	"item.moreore.rainbow_chestplate": "Regenbogen Brustplatte",
+	"item.moreore.rainbow_helmet": "Regenbogen Helm",
+	"item.moreore.rainbow_leggins": "Regenbogen Hose",
+	"item.moreore.beamer": "Beamer",
+	"block.moreore.beamer": "Beamer",
+	"item.moreore.village_guardian_spawnegg": "Dorfbewohner Wächter Spawnei",
+	"item.moreore.squirrel_spawnegg": "Eichhörnchen Spawnei",
+	"item.moreore.patrolpoint": "Kontrolpunkt",
+	"block.moreore.patrolpoint": "Kontrolpunkt",
+	"item.moreore.silver_wood_button": "Silber Holz Knopf",
+	"block.moreore.silver_wood_button": "Silber Holz Knopf",
+	"item.moreore.letuce": "Salat",
+	"block.moreore.letuce": "Salat Samen",
+	"item.moreore.letuce_seed": "Salat Samen",
+    "block.moreore.nut_bush_leaves": "Nussstrauch Laub",
+    "item.moreore.nut_bush_leaves": "Nussstrauch Laub",
+    "item.moreore.nut": "Nuss",
+    "block.moreore.nut_bush_log": "Nussstrauch Stamm",
+    "block.moreore.nut_bush_sapling": "Nussstrauch Setzling",
 	"block.moreore.lava_sponge": "Lava Schwam",
 	"block.moreore.burned_out_lava_sponge": "Brenned aus Lava Schwamm",
-	
 	"item.moreore.blue_stick": "Blauer  Stock",
-	"biome.moreore.silvertale": "SilberTal",
-    "biome.moreore.deathicetale": "Totes Eis Tal",
-	"biome.moreore.golden_mountains": "Golde Berge",
-	"dimension.moreore.silver_dimension": "Silber_Dimension",
-
-    "enchantment.moreore.get_home": "Nach-Hause"
+	"itemGroup.tools": "Werkzeuge",
+	"itemGroup.mineralic": "Mineralien",
+    "itemGroup.biologic": "Biologisch",
+	"enchantment.moreore.get_home": "Nach-Hause"
 }
