--- a/src/main/resources/assets/moreore/lang/en_us.json
+++ b/src/main/resources/assets/moreore/lang/en_us.json
@@ -10,29 +10,27 @@
 	"item.moreore.emerald_shovel": "Emerald Shovel",
 	"item.moreore.emerald_sword": "Emerald Sword",
 	"item.moreore.rainbow_sword": "Rainbow Sword",
-	"itemGroup.tools": "Tools",
-    "item.moreore.rubin_shovel": "Rubin Shovel",
-    "item.moreore.rubin_sword": "Rubin Sword",
-    "item.moreore.rubin_hoe": "Rubin Hoe",
-    "item.moreore.rubin_pickaxe": "Rubin Pickaxe",
-    "item.moreore.rubin_axe": "Rubin Axe",
-    "item.moreore.saphir_shovel": "Saphir Shovel",
-    "item.moreore.saphir_sword": "Saphir Sword",
-    "item.moreore.saphir_hoe": "Saphir Hoe",
-    "item.moreore.saphir_pickaxe": "Saphir Pickaxe",
-    "item.moreore.saphir_axe": "Saphir Axe",
-    "item.moreore.rainbow_shovel": "Rainbow Shovel",
-    "item.moreore.rainbow_hoe": "Rainbow Hoe",
-    "item.moreore.rainbow_pickaxe": "Rainbow Pickaxe",
-    "item.moreore.rainbow_axe": "Rainbow Axe",
-	
+	"item.moreore.rubin_shovel": "Rubin Shovel",
+	"item.moreore.rubin_sword": "Rubin Sword",
+	"item.moreore.rubin_hoe": "Rubin Hoe",
+	"item.moreore.rubin_pickaxe": "Rubin Pickaxe",
+	"item.moreore.rubin_axe": "Rubin Axe",
+	"item.moreore.saphir_shovel": "Saphir Shovel",
+	"item.moreore.saphir_sword": "Saphir Sword",
+	"item.moreore.saphir_hoe": "Saphir Hoe",
+	"item.moreore.saphir_pickaxe": "Saphir Pickaxe",
+	"item.moreore.saphir_axe": "Saphir Axe",
+	"item.moreore.rainbow_shovel": "Rainbow Shovel",
+	"item.moreore.rainbow_hoe": "Rainbow Hoe",
+	"item.moreore.rainbow_pickaxe": "Rainbow Pickaxe",
+	"item.moreore.rainbow_axe": "Rainbow Axe",
 	"block.moreore.silver_ore": "Silver Ore",
 	"item.moreore.silver_ore": "Silver Ore",
 	"item.moreore.silver_ingot": "Silver Ingot",
 	"item.moreore.silver_logs": "Silver Tree",
 	"block.moreore.silver_logs": "Silver Tree",
-    "item.moreore.stripped_silver_logs": "Stripped Silver Log",
-    "block.moreore.stripped_silver_logs": "Stripped Silver Log",
+	"item.moreore.stripped_silver_logs": "Stripped Silver Log",
+	"block.moreore.stripped_silver_logs": "Stripped Silver Log",
 	"item.moreore.silver_leaves": "Silver Tree Leaves",
 	"block.moreore.silver_leaves": "Silver Tree Leaves",
 	"item.moreore.silver_planks": "Silver Planks",
@@ -45,6 +43,7 @@
 	"block.moreore.glow_blue_block": "Blue Glowing Block",
 	"item.moreore.banana": "Banana",
 	"block.moreore.banana": "Banana",
+	"item.moreore.banana_seed": "Banana Seeds",
 	"item.moreore.alexandrit_block": "Alexandrit Block",
 	"block.moreore.alexandrit_block": "Alexandrit Block",
 	"item.moreore.alexandrit": "Alexandrit",
@@ -74,68 +73,63 @@
 	"block.moreore.gold_leaves": "Gold Leaves",
 	"item.moreore.gold_saplings": "Gold Sapling",
 	"block.moreore.gold_saplings": "Gold Sapling",
-    "item.moreore.silver_wall": "Silver Wall",
-    "block.moreore.silver_wall": "Silver Wall",
-    "item.moreore.silver_trapdoor": "Silver Trapdoor",
-    "block.moreore.silver_trapdoor": "Silver Trapdoor",
-    "item.moreore.silver_fence_gate": "Silver Fence-Gate",
-    "block.moreore.silver_fence_gate": "Silver Fence-Gate",
-    "item.moreore.ice_leaves": "Ice Leaves",
-    "block.moreore.ice_leaves": "Ice Leaves",
-    "item.moreore.ice_saplings": "Ice Sapling",
-    "block.moreore.ice_saplings": "Ice Sapling",
-    "item.moreore.silver_door": "Silver Door",
-    "block.moreore.silver_door": "Silver Door",
-    "item.moreore.glass_door": "Glass Door",
-    "block.moreore.glass_door": "Glass Door",
-    "item.moreore.rubin_block": "Rubin Block",
-    "block.moreore.rubin_block": "Rubin Block",
-    "item.moreore.saphir_block": "Saphir Block",
-    "block.moreore.saphir_block": "Saphir Block",
-    "item.moreore.rubin_ore": "Rubin Ore",
-    "block.moreore.rubin_ore": "Rubin Ore",
-    "item.moreore.saphir_ore": "Saphir Ore",
-    "block.moreore.saphir_ore": "Saphir Ore",
-    "item.moreore.saphir": "Saphir",
-    "item.moreore.rubin": "Rubin",
-    "item.moreore.rubin_boots": "Rubin Boots",
-    "item.moreore.rubin_chestplate": "Rubin Chestplate",
-    "item.moreore.rubin_helmet": "Rubin Helmet",
-    "item.moreore.rubin_leggins": "Rubin Leggins",
-    "item.moreore.saphir_boots": "Saphir Boots",
-    "item.moreore.saphir_chestplate": "Saphir Chestplate",
-    "item.moreore.saphir_helmet": "Saphir Helmet",
-    "item.moreore.saphir_leggins": "Saphir Leggins",
-    "item.moreore.rainbow_boots": "Rainbow Boots",
-    "item.moreore.rainbow_chestplate": "Rainbow Chestplate",
-    "item.moreore.rainbow_helmet": "Rainbow Helmet",
-    "item.moreore.rainbow_leggins": "Rainbow Leggins",
-    "item.moreore.beamer": "Beamer",
-    "block.moreore.beamer": "Beamer",
-    "item.moreore.village_guardian_spawnegg": "Village Guardian Spawnegg",
-    "item.moreore.squirrel_spawnegg": "Squirrel Spawnegg",
-    "item.moreore.patrolpoint": "Patrolpoint",
-    "block.moreore.patrolpoint": "Patrolpoint",
-    "item.moreore.silver_wood_button": "Silver Wood Button",
-    "block.moreore.silver_wood_button": "Silver Wood Button",
-    "item.moreore.letuce": "Letuce",
-    "block.moreore.letuce": "Letuce Seed",
-    "item.moreore.letuce_seed": "Letuce Seed",
-    "block.moreore.nut_bush_block": "Nut Bush",
-    "item.moreore.nut_bush_block": "Nut Bush",
-    "item.moreore.nut": "Nuts",
-
-	"itemGroup.mineralic": "Mineralic",
-	"itemGroup.biologic": "Biologic",
-
+	"item.moreore.silver_wall": "Silver Wall",
+	"block.moreore.silver_wall": "Silver Wall",
+	"item.moreore.silver_trapdoor": "Silver Trapdoor",
+	"block.moreore.silver_trapdoor": "Silver Trapdoor",
+	"item.moreore.silver_fence_gate": "Silver Fence-Gate",
+	"block.moreore.silver_fence_gate": "Silver Fence-Gate",
+	"item.moreore.ice_leaves": "Ice Leaves",
+	"block.moreore.ice_leaves": "Ice Leaves",
+	"item.moreore.ice_saplings": "Ice Sapling",
+	"block.moreore.ice_saplings": "Ice Sapling",
+	"item.moreore.silver_door": "Silver Door",
+	"block.moreore.silver_door": "Silver Door",
+	"item.moreore.glass_door": "Glass Door",
+	"block.moreore.glass_door": "Glass Door",
+	"item.moreore.rubin_block": "Rubin Block",
+	"block.moreore.rubin_block": "Rubin Block",
+	"item.moreore.saphir_block": "Saphir Block",
+	"block.moreore.saphir_block": "Saphir Block",
+	"item.moreore.rubin_ore": "Rubin Ore",
+	"block.moreore.rubin_ore": "Rubin Ore",
+	"item.moreore.saphir_ore": "Saphir Ore",
+	"block.moreore.saphir_ore": "Saphir Ore",
+	"item.moreore.saphir": "Saphir",
+	"item.moreore.rubin": "Rubin",
+	"item.moreore.rubin_boots": "Rubin Boots",
+	"item.moreore.rubin_chestplate": "Rubin Chestplate",
+	"item.moreore.rubin_helmet": "Rubin Helmet",
+	"item.moreore.rubin_leggins": "Rubin Leggins",
+	"item.moreore.saphir_boots": "Saphir Boots",
+	"item.moreore.saphir_chestplate": "Saphir Chestplate",
+	"item.moreore.saphir_helmet": "Saphir Helmet",
+	"item.moreore.saphir_leggins": "Saphir Leggins",
+	"item.moreore.rainbow_boots": "Rainbow Boots",
+	"item.moreore.rainbow_chestplate": "Rainbow Chestplate",
+	"item.moreore.rainbow_helmet": "Rainbow Helmet",
+	"item.moreore.rainbow_leggins": "Rainbow Leggins",
+	"item.moreore.beamer": "Beamer",
+	"block.moreore.beamer": "Beamer",
+	"item.moreore.village_guardian_spawnegg": "Village Guardian Spawnegg",
+	"item.moreore.squirrel_spawnegg": "Squirrel Spawnegg",
+	"item.moreore.patrolpoint": "Patrolpoint",
+	"block.moreore.patrolpoint": "Patrolpoint",
+	"item.moreore.silver_wood_button": "Silver Wood Button",
+	"block.moreore.silver_wood_button": "Silver Wood Button",
+	"item.moreore.letuce": "Letuce",
+	"block.moreore.letuce": "Letuce Seed",
+	"item.moreore.letuce_seed": "Letuce Seed",
+	"block.moreore.nut_bush_leaves": "Nut Bush Leaves",
+	"item.moreore.nut_bush_leaves": "Nut Bush Leaves",
+	"item.moreore.nut": "Nuts",
+	"block.moreore.nut_bush_log": "Nut Bush Logs",
+	"block.moreore.nut_bush_sapling": "Nut Bush Sapling",
 	"block.moreore.lava_sponge": "Lava Sponge",
 	"block.moreore.burned_out_lava_sponge": "Burned Out Lava Sponge",
-	
 	"item.moreore.blue_stick": "Blue Stick",
-	"biome.moreore.silvertale": "SilverTale",
-    "biome.moreore.deathicetale": "Death Ice Tale",
-	"biome.moreore.golden_mountains": "Golden Mountains",
-	"dimension.moreore.silver_dimension": "Silver_Dimension",
-
-    "enchantment.moreore.get_home": "Get-Home"
+	"itemGroup.mineralic": "Mineralic",
+	"itemGroup.biologic": "Biologic",
+	"itemGroup.tools": "Tools",
+	"enchantment.moreore.get_home": "Get-Home"
 }
