See UpdateJSON@1.16.4-1.1.0-Beta22

--- a/src/main/resources/assets/moreore/lang/de_de.json
+++ b/src/main/resources/assets/moreore/lang/de_de.json
@@ -110,8 +110,8 @@
 	"item.moreore.rainbow_leggins": "Regenbogen Hose",
 	"item.moreore.beamer": "Beamer",
 	"block.moreore.beamer": "Beamer",
-	"item.moreore.village_guardian_spawnegg": "Dorfbewohner Wächter Spawnei",
-	"item.moreore.squirrel_spawnegg": "Eichhörnchen Spawnei",
+	"item.moreore.village_guardian_spawnegg": "Dorf-Wächter-Spawn-Ei",
+	"item.moreore.squirrel_spawnegg": "Eichhörnchen-Spawn-Ei",
 	"item.moreore.patrolpoint": "Kontrolpunkt",
 	"block.moreore.patrolpoint": "Kontrolpunkt",
 	"item.moreore.silver_wood_button": "Silber Holz Knopf",
@@ -119,16 +119,17 @@
 	"item.moreore.letuce": "Salat",
 	"block.moreore.letuce": "Salat Samen",
 	"item.moreore.letuce_seed": "Salat Samen",
-    "block.moreore.nut_bush_leaves": "Nussstrauch Laub",
-    "item.moreore.nut_bush_leaves": "Nussstrauch Laub",
-    "item.moreore.nut": "Nuss",
-    "block.moreore.nut_bush_log": "Nussstrauch Stamm",
-    "block.moreore.nut_bush_sapling": "Nussstrauch Setzling",
+	"block.moreore.nut_bush_leaves": "Nussstrauch Laub",
+	"item.moreore.nut_bush_leaves": "Nussstrauch Laub",
+	"item.moreore.nut": "Nuss",
+	"block.moreore.nut_bush_log": "Nussstrauch Stamm",
+	"block.moreore.nut_bush_sapling": "Nussstrauch Setzling",
 	"block.moreore.lava_sponge": "Lava Schwam",
 	"block.moreore.burned_out_lava_sponge": "Brenned aus Lava Schwamm",
 	"item.moreore.blue_stick": "Blauer  Stock",
 	"itemGroup.tools": "Werkzeuge",
 	"itemGroup.mineralic": "Mineralien",
-    "itemGroup.biologic": "Biologisch",
-	"enchantment.moreore.get_home": "Nach-Hause"
+	"itemGroup.biologic": "Biologisch",
+	"enchantment.moreore.get_home": "Nach-Hause",
+	"entity.moreore.squirrel": "Eichhörnchen"
 }
