See UpdateJSON@1.16.4-1.1.0-Beta23

--- a/src/main/resources/assets/moreore/lang/de_de.json
+++ b/src/main/resources/assets/moreore/lang/de_de.json
@@ -27,8 +27,8 @@
 	"block.moreore.silver_ore": "Silber Erz",
 	"item.moreore.silver_ore": "Silber Erz",
 	"item.moreore.silver_ingot": "Silber Barren",
-	"item.moreore.silver_logs": "Silber Baum",
-	"block.moreore.silver_logs": "Silber Baum",
+	"item.moreore.silver_logs": "Silber Stamm",
+	"block.moreore.silver_logs": "Silber Stamm",
 	"item.moreore.stripped_silver_logs": "Endrindettes Silber Stamm",
 	"block.moreore.stripped_silver_logs": "Endrindettes Silber Stamm",
 	"item.moreore.silver_leaves": "Silber Baum Blätter",
