--- a/src/main/resources/assets/moreore/lang/en_us.json
+++ b/src/main/resources/assets/moreore/lang/en_us.json
@@ -27,8 +27,8 @@
 	"block.moreore.silver_ore": "Silver Ore",
 	"item.moreore.silver_ore": "Silver Ore",
 	"item.moreore.silver_ingot": "Silver Ingot",
-	"item.moreore.silver_logs": "Silver Tree",
-	"block.moreore.silver_logs": "Silver Tree",
+	"item.moreore.silver_logs": "Silver Log",
+	"block.moreore.silver_logs": "Silver Log",
 	"item.moreore.stripped_silver_logs": "Stripped Silver Log",
 	"block.moreore.stripped_silver_logs": "Stripped Silver Log",
 	"item.moreore.silver_leaves": "Silver Tree Leaves",
