--- a/src/main/resources/assets/moreore/lang/en_us.json
+++ b/src/main/resources/assets/moreore/lang/en_us.json
@@ -5,8 +5,7 @@
 	"item.moreore.emerald_chestplate": "Emerald Chestplate",
 	"item.moreore.emerald_helmet": "Emerald Helmet",
 	"item.moreore.emerald_hoe": "Emerald Hoe",
-	"item.moreore.emerald_leggins": "Emerald Leggins",
-	"item.moreore.emerald_shard": "Emerald Shard",
+	"item.moreore.emerald_Leggings": "Emerald Leggings",
 	"item.moreore.emerald_shovel": "Emerald Shovel",
 	"item.moreore.emerald_sword": "Emerald Sword",
 	"item.moreore.rainbow_sword": "Rainbow Sword",
@@ -99,15 +98,15 @@
 	"item.moreore.rubin_boots": "Rubin Boots",
 	"item.moreore.rubin_chestplate": "Rubin Chestplate",
 	"item.moreore.rubin_helmet": "Rubin Helmet",
-	"item.moreore.rubin_leggins": "Rubin Leggins",
+	"item.moreore.rubin_Leggings": "Rubin Leggings",
 	"item.moreore.saphir_boots": "Saphir Boots",
 	"item.moreore.saphir_chestplate": "Saphir Chestplate",
 	"item.moreore.saphir_helmet": "Saphir Helmet",
-	"item.moreore.saphir_leggins": "Saphir Leggins",
+	"item.moreore.saphir_Leggings": "Saphir Leggings",
 	"item.moreore.rainbow_boots": "Rainbow Boots",
 	"item.moreore.rainbow_chestplate": "Rainbow Chestplate",
 	"item.moreore.rainbow_helmet": "Rainbow Helmet",
-	"item.moreore.rainbow_leggins": "Rainbow Leggins",
+	"item.moreore.rainbow_Leggings": "Rainbow Leggings",
 	"item.moreore.beamer": "Beamer",
 	"block.moreore.beamer": "Beamer",
 	"item.moreore.village_guardian_spawnegg": "Village Guardian Spawn Egg",
@@ -131,5 +130,9 @@
 	"itemGroup.biologic": "Biologic",
 	"itemGroup.tools": "Tools",
 	"enchantment.moreore.get_home": "Get-Home",
-	"entity.moreore.squirrel": "Squirrel"
+	"entity.moreore.squirrel": "Squirrel",
+	"commands.tlp.failed.entity.notEnoughLevel.single": "Not Enough Level to Teleport %s to %s",
+	"commands.tlp.failed.entity.notEnoughLevel.multiple": "Not Enough Level to Teleport %s Entities to %s",
+	"commands.tlp.failed.location.notEnoughLevel.single": "Not Enough Level to Teleport %s to %s, %s, %s",
+	"commands.tlp.failed.location.notEnoughLevel.multiple": "Not Enough Level to Teleport %s Entities to %s, %s, %s"
 }
