See UpdateJson@1.16.4-1.1.0-Beta25

--- a/src/main/resources/assets/moreore/lang/en_us.json
+++ b/src/main/resources/assets/moreore/lang/en_us.json
@@ -5,7 +5,7 @@
 	"item.moreore.emerald_chestplate": "Emerald Chestplate",
 	"item.moreore.emerald_helmet": "Emerald Helmet",
 	"item.moreore.emerald_hoe": "Emerald Hoe",
-	"item.moreore.emerald_Leggings": "Emerald Leggings",
+	"item.moreore.emerald_leggins": "Emerald Leggings",
 	"item.moreore.emerald_shovel": "Emerald Shovel",
 	"item.moreore.emerald_sword": "Emerald Sword",
 	"item.moreore.rainbow_sword": "Rainbow Sword",
@@ -98,15 +98,15 @@
 	"item.moreore.rubin_boots": "Rubin Boots",
 	"item.moreore.rubin_chestplate": "Rubin Chestplate",
 	"item.moreore.rubin_helmet": "Rubin Helmet",
-	"item.moreore.rubin_Leggings": "Rubin Leggings",
+	"item.moreore.rubin_leggins": "Rubin Leggings",
 	"item.moreore.saphir_boots": "Saphir Boots",
 	"item.moreore.saphir_chestplate": "Saphir Chestplate",
 	"item.moreore.saphir_helmet": "Saphir Helmet",
-	"item.moreore.saphir_Leggings": "Saphir Leggings",
+	"item.moreore.saphir_leggins": "Saphir Leggings",
 	"item.moreore.rainbow_boots": "Rainbow Boots",
 	"item.moreore.rainbow_chestplate": "Rainbow Chestplate",
 	"item.moreore.rainbow_helmet": "Rainbow Helmet",
-	"item.moreore.rainbow_Leggings": "Rainbow Leggings",
+	"item.moreore.rainbow_leggins": "Rainbow Leggings",
 	"item.moreore.beamer": "Beamer",
 	"block.moreore.beamer": "Beamer",
 	"item.moreore.village_guardian_spawnegg": "Village Guardian Spawn Egg",
