--- a/src/main/resources/assets/moreore/lang/en_us.json
+++ b/src/main/resources/assets/moreore/lang/en_us.json
@@ -38,7 +38,7 @@
 	"block.moreore.silver_saplings": "Silver Sapling",
 	"item.moreore.silver_wood": "Silver Wood",
 	"block.moreore.silver_wood": "Silver Wood",
-	"block.moreore.glow_blue_block": "Blue Glowing Block",
+	"block.moreore.glow_blue_block": "Blue Glow Block",
 	"item.moreore.banana": "Banana",
 	"block.moreore.banana": "Banana",
 	"item.moreore.banana_seed": "Banana Seeds",
