See UpdateJSON@1.16.4-1.2.0-Beta0.1

--- a/src/main/resources/assets/moreore/lang/de_de.json
+++ b/src/main/resources/assets/moreore/lang/de_de.json
@@ -126,9 +126,15 @@
 	"block.moreore.lava_sponge": "Lava Schwam",
 	"block.moreore.burned_out_lava_sponge": "Brenned aus Lava Schwamm",
 	"item.moreore.blue_stick": "Blauer  Stock",
+	"block.moreore.rune_table": "Runen Tisch",
+	"item.moreore.rune_table": "Runen Tisch",
+	"item.moreore.rune_base": "Runen Basis",
+	"item.moreore.rune_green_shard": "Grüne Runen Scherbe",
+	"item.moreore.rune_green": "Grüne Rune",
 	"itemGroup.tools": "Werkzeuge",
 	"itemGroup.mineralic": "Mineralien",
 	"itemGroup.biologic": "Biologisch",
+	"itemGroup.runes": "Runes",
 	"enchantment.moreore.get_home": "Nach-Hause",
 	"entity.moreore.squirrel": "Eichhörnchen",
 	"commands.tlp.failed.entity.notEnoughLevel.single": "Not Enough Level to Teleport %s to %s",
