--- a/src/main/resources/assets/moreore/lang/en_us.json
+++ b/src/main/resources/assets/moreore/lang/en_us.json
@@ -126,9 +126,15 @@
 	"block.moreore.lava_sponge": "Lava Sponge",
 	"block.moreore.burned_out_lava_sponge": "Burned Out Lava Sponge",
 	"item.moreore.blue_stick": "Blue Stick",
+	"block.moreore.rune_table": "Rune Table",
+	"item.moreore.rune_table": "Rune Table",
+	"item.moreore.rune_base": "Rune Base",
+	"item.moreore.rune_green_shard": "Green Rune Shard",
+	"item.moreore.rune_green": "Green Rune",
 	"itemGroup.mineralic": "Mineralic",
 	"itemGroup.biologic": "Biologic",
 	"itemGroup.tools": "Tools",
+	"itemGroup.runes": "Runes",
 	"enchantment.moreore.get_home": "Get-Home",
 	"entity.moreore.squirrel": "Squirrel",
 	"commands.tlp.failed.entity.notEnoughLevel.single": "Not Enough Level to Teleport %s to %s",
