--- a/src/main/resources/assets/moreore/lang/en_us.json
+++ b/src/main/resources/assets/moreore/lang/en_us.json
@@ -9,11 +9,11 @@
 	"item.moreore.emerald_shovel": "Emerald Shovel",
 	"item.moreore.emerald_sword": "Emerald Sword",
 	"item.moreore.rainbow_sword": "Rainbow Sword",
-	"item.moreore.rubin_shovel": "Rubin Shovel",
-	"item.moreore.rubin_sword": "Rubin Sword",
-	"item.moreore.rubin_hoe": "Rubin Hoe",
-	"item.moreore.rubin_pickaxe": "Rubin Pickaxe",
-	"item.moreore.rubin_axe": "Rubin Axe",
+	"item.moreore.rubin_shovel": "Ruby Shovel",
+	"item.moreore.rubin_sword": "Ruby Sword",
+	"item.moreore.rubin_hoe": "Ruby Hoe",
+	"item.moreore.rubin_pickaxe": "Ruby Pickaxe",
+	"item.moreore.rubin_axe": "Ruby Axe",
 	"item.moreore.saphir_shovel": "Saphir Shovel",
 	"item.moreore.saphir_sword": "Saphir Sword",
 	"item.moreore.saphir_hoe": "Saphir Hoe",
@@ -85,20 +85,20 @@
 	"block.moreore.silver_door": "Silver Door",
 	"item.moreore.glass_door": "Glass Door",
 	"block.moreore.glass_door": "Glass Door",
-	"item.moreore.rubin_block": "Rubin Block",
-	"block.moreore.rubin_block": "Rubin Block",
+	"item.moreore.rubin_block": "Ruby Block",
+	"block.moreore.rubin_block": "Ruby Block",
 	"item.moreore.saphir_block": "Saphir Block",
 	"block.moreore.saphir_block": "Saphir Block",
-	"item.moreore.rubin_ore": "Rubin Ore",
-	"block.moreore.rubin_ore": "Rubin Ore",
+	"item.moreore.rubin_ore": "Ruby Ore",
+	"block.moreore.rubin_ore": "Ruby Ore",
 	"item.moreore.saphir_ore": "Saphir Ore",
 	"block.moreore.saphir_ore": "Saphir Ore",
 	"item.moreore.saphir": "Saphir",
-	"item.moreore.rubin": "Rubin",
-	"item.moreore.rubin_boots": "Rubin Boots",
-	"item.moreore.rubin_chestplate": "Rubin Chestplate",
-	"item.moreore.rubin_helmet": "Rubin Helmet",
-	"item.moreore.rubin_leggins": "Rubin Leggings",
+	"item.moreore.rubin": "Ruby",
+	"item.moreore.rubin_boots": "Ruby Boots",
+	"item.moreore.rubin_chestplate": "Ruby Chestplate",
+	"item.moreore.rubin_helmet": "Ruby Helmet",
+	"item.moreore.rubin_leggins": "Ruby Leggings",
 	"item.moreore.saphir_boots": "Saphir Boots",
 	"item.moreore.saphir_chestplate": "Saphir Chestplate",
 	"item.moreore.saphir_helmet": "Saphir Helmet",
