See UpdateJSON@1.16.4-1.2.0-Beta0.3

--- a/src/main/resources/assets/moreore/lang/de_de.json
+++ b/src/main/resources/assets/moreore/lang/de_de.json
@@ -50,7 +50,7 @@
 	"item.moreore.fuel": "Fuel",
 	"item.moreore.rainbow_rune": "Regenbogenrune",
 	"item.moreore.rainbow_ore": "Regenbogen Erz",
-	"item.moreore.rainbow": "Regenbogen",
+	"item.moreore.rainbow": "Regenbogen Runen Scherbe",
 	"block.moreore.rainbow_ore": "Regenbogen Erz",
 	"item.moreore.rainbow_block": "Regenbolck Block",
 	"block.moreore.rainbow_block": "Regenbogen Block",
@@ -128,6 +128,9 @@
 	"item.moreore.blue_stick": "Blauer  Stock",
 	"block.moreore.rune_table": "Runen Tisch",
 	"item.moreore.rune_table": "Runen Tisch",
+	"block.moreore.rune_base_block": "Runen Basis Block",
+    "item.moreore.rune_base_block": "Runen Basis Block",
+    "item.moreore.giant_zombie_king_spawnegg": "Riesen Zombie König Spawn-Ei",
 	"item.moreore.rune_base": "Runen Basis",
 	"item.moreore.rune_green_shard": "Grüne Runen Scherbe",
 	"item.moreore.rune_green": "Grüne Rune",
@@ -137,6 +140,8 @@
 	"itemGroup.runes": "Runes",
 	"enchantment.moreore.get_home": "Nach-Hause",
 	"entity.moreore.squirrel": "Eichhörnchen",
+	"entity.moreore.giant_zombie_king": "Riesen Zombie König",
+	"entity.moreore.giant_zombie_king.runeInv_expand": "Dein Runen Inventar ist jetzt %s Slot(s) groß",
 	"commands.tlp.failed.entity.notEnoughLevel.single": "Not Enough Level to Teleport %s to %s",
 	"commands.tlp.failed.entity.notEnoughLevel.multiple": "Not Enough Level to Teleport %s Entities to %s",
 	"commands.tlp.failed.location.notEnoughLevel.single": "Not Enough Level to Teleport %s to %s, %s, %s",
