--- a/src/main/resources/assets/moreore/lang/en_us.json
+++ b/src/main/resources/assets/moreore/lang/en_us.json
@@ -50,7 +50,7 @@
 	"item.moreore.fuel": "Fuel",
 	"item.moreore.rainbow_rune": "Rainbow Rune",
 	"item.moreore.rainbow_ore": "Rainbow Ore",
-	"item.moreore.rainbow": "Rainbow",
+	"item.moreore.rainbow": "rainbow rune shard",
 	"block.moreore.rainbow_ore": "Rainbow Ore",
 	"item.moreore.rainbow_block": "Rainbow Block",
 	"block.moreore.rainbow_block": "Rainbow Block",
@@ -128,6 +128,9 @@
 	"item.moreore.blue_stick": "Blue Stick",
 	"block.moreore.rune_table": "Rune Table",
 	"item.moreore.rune_table": "Rune Table",
+	"block.moreore.rune_base_block": "Rune Base Block",
+	"item.moreore.rune_base_block": "Rune Base Block",
+	"item.moreore.giant_zombie_king_spawnegg": "Giant Zombie King Spawn Egg",
 	"item.moreore.rune_base": "Rune Base",
 	"item.moreore.rune_green_shard": "Green Rune Shard",
 	"item.moreore.rune_green": "Green Rune",
@@ -137,6 +140,8 @@
 	"itemGroup.runes": "Runes",
 	"enchantment.moreore.get_home": "Get-Home",
 	"entity.moreore.squirrel": "Squirrel",
+	"entity.moreore.giant_zombie_king": "Giant Zombie King",
+	"entity.moreore.giant_zombie_king.runeInv_expand": "Your Rune inventory size is now %s",
 	"commands.tlp.failed.entity.notEnoughLevel.single": "Not Enough Level to Teleport %s to %s",
 	"commands.tlp.failed.entity.notEnoughLevel.multiple": "Not Enough Level to Teleport %s Entities to %s",
 	"commands.tlp.failed.location.notEnoughLevel.single": "Not Enough Level to Teleport %s to %s, %s, %s",
