See UpdateJSON@1.16.4-1.2.0-Beta0.4

--- a/src/main/resources/assets/moreore/lang/de_de.json
+++ b/src/main/resources/assets/moreore/lang/de_de.json
@@ -129,8 +129,8 @@
 	"block.moreore.rune_table": "Runen Tisch",
 	"item.moreore.rune_table": "Runen Tisch",
 	"block.moreore.rune_base_block": "Runen Basis Block",
-    "item.moreore.rune_base_block": "Runen Basis Block",
-    "item.moreore.giant_zombie_king_spawnegg": "Riesen Zombie König Spawn-Ei",
+	"item.moreore.rune_base_block": "Runen Basis Block",
+	"item.moreore.giant_zombie_king_spawnegg": "Riesen Zombie König Spawn-Ei",
 	"item.moreore.rune_base": "Runen Basis",
 	"item.moreore.rune_green_shard": "Grüne Runen Scherbe",
 	"item.moreore.rune_green": "Grüne Rune",
@@ -142,6 +142,7 @@
 	"entity.moreore.squirrel": "Eichhörnchen",
 	"entity.moreore.giant_zombie_king": "Riesen Zombie König",
 	"entity.moreore.giant_zombie_king.runeInv_expand": "Dein Runen Inventar ist jetzt %s Slot(s) groß",
+	"name.moreore.trooper": "Kavallerist",
 	"commands.tlp.failed.entity.notEnoughLevel.single": "Not Enough Level to Teleport %s to %s",
 	"commands.tlp.failed.entity.notEnoughLevel.multiple": "Not Enough Level to Teleport %s Entities to %s",
 	"commands.tlp.failed.location.notEnoughLevel.single": "Not Enough Level to Teleport %s to %s, %s, %s",
