--- a/src/main/resources/assets/moreore/lang/en_us.json
+++ b/src/main/resources/assets/moreore/lang/en_us.json
@@ -142,6 +142,7 @@
 	"entity.moreore.squirrel": "Squirrel",
 	"entity.moreore.giant_zombie_king": "Giant Zombie King",
 	"entity.moreore.giant_zombie_king.runeInv_expand": "Your Rune inventory size is now %s",
+	"name.moreore.trooper": "Trooper",
 	"commands.tlp.failed.entity.notEnoughLevel.single": "Not Enough Level to Teleport %s to %s",
 	"commands.tlp.failed.entity.notEnoughLevel.multiple": "Not Enough Level to Teleport %s Entities to %s",
 	"commands.tlp.failed.location.notEnoughLevel.single": "Not Enough Level to Teleport %s to %s, %s, %s",
