See UpdateJSON@1.16.4-1.2.0-Beta1.1

--- a/src/main/resources/assets/moreore/lang/de_de.json
+++ b/src/main/resources/assets/moreore/lang/de_de.json
@@ -134,6 +134,20 @@
 	"item.moreore.rune_base": "Runen Basis",
 	"item.moreore.rune_green_shard": "Grüne Runen Scherbe",
 	"item.moreore.rune_green": "Grüne Rune",
+	"item.moreore.rune_orange_shard": "Orange Runen Scherbe",
+	"item.moreore.rune_orange": "Orange Rune",
+	"item.moreore.rune_blue_shard": "Blaue Runen Scherbe",
+	"item.moreore.rune_blue": "Blaue Rune",
+	"item.moreore.rune_red_shard": "Rote Runen Scherbe",
+	"item.moreore.rune_red": "Rote Rune",
+	"item.moreore.rune_yellow_shard": "Gelbe Runen Scherbe",
+	"item.moreore.rune_yellow": "Gelbe Rune",
+	"item.moreore.rune_gray_shard": "Graue Runen Scherbe",
+	"item.moreore.rune_gray": "Graue Rune",
+	"item.moreore.rune_brown_shard": "Braune Runen Scherbe",
+	"item.moreore.rune_brown": "Braune Rune",
+	"item.moreore.rune_purple_shard": "Lila Runen Scherbe",
+	"item.moreore.rune_purple": "Purple Rune",
 	"itemGroup.tools": "Werkzeuge",
 	"itemGroup.mineralic": "Mineralien",
 	"itemGroup.biologic": "Biologisch",
