--- a/src/main/resources/assets/moreore/lang/en_us.json
+++ b/src/main/resources/assets/moreore/lang/en_us.json
@@ -50,7 +50,7 @@
 	"item.moreore.fuel": "Fuel",
 	"item.moreore.rainbow_rune": "Rainbow Rune",
 	"item.moreore.rainbow_ore": "Rainbow Ore",
-	"item.moreore.rainbow": "rainbow rune shard",
+	"item.moreore.rainbow": "Rainbow Rune Shard",
 	"block.moreore.rainbow_ore": "Rainbow Ore",
 	"item.moreore.rainbow_block": "Rainbow Block",
 	"block.moreore.rainbow_block": "Rainbow Block",
@@ -134,6 +134,20 @@
 	"item.moreore.rune_base": "Rune Base",
 	"item.moreore.rune_green_shard": "Green Rune Shard",
 	"item.moreore.rune_green": "Green Rune",
+	"item.moreore.rune_orange_shard": "Orange Rune Shard",
+	"item.moreore.rune_orange": "Orange Rune",
+	"item.moreore.rune_blue_shard": "Blue Rune Shard",
+	"item.moreore.rune_blue": "Blue Rune",
+	"item.moreore.rune_red_shard": "Red Rune Shard",
+	"item.moreore.rune_red": "Red Rune",
+	"item.moreore.rune_yellow_shard": "Yellow Rune Shard",
+	"item.moreore.rune_yellow": "Yellow Rune",
+	"item.moreore.rune_gray_shard": "Gray Rune Shard",
+	"item.moreore.rune_gray": "Gray Rune",
+	"item.moreore.rune_brown_shard": "Brown Rune Shard",
+	"item.moreore.rune_brown": "Brown Rune",
+	"item.moreore.rune_purple_shard": "Purple Rune Shard",
+	"item.moreore.rune_purple": "Purple Rune",
 	"itemGroup.mineralic": "Mineralic",
 	"itemGroup.biologic": "Biologic",
 	"itemGroup.tools": "Tools",
