--- a/src/main/resources/assets/moreore/lang/de_de.json
+++ b/src/main/resources/assets/moreore/lang/de_de.json
@@ -161,5 +161,14 @@
 	"commands.tlp.failed.entity.notEnoughLevel.multiple": "Not Enough Level to Teleport %s Entities to %s",
 	"commands.tlp.failed.location.notEnoughLevel.single": "Not Enough Level to Teleport %s to %s, %s, %s",
 	"commands.tlp.failed.location.notEnoughLevel.multiple": "Not Enough Level to Teleport %s Entities to %s, %s, %s",
-	"runes.moreore.broken": "Die %s wurde zerstört"
+	"runes.moreore.broken": "Die %s wurde zerstört",
+	"runes.moreore.rainbow": "Wird zur Herstellung von Werkzeug und Rüstung verwendet",
+	"runes.moreore.green": "Wird verwendet, um mehr Erntegut zu erhalten",
+	"runes.moreore.orange": "Wird verwendet, um schneller zu laufen",
+	"runes.moreore.blue": "Wird verwendet, um keinen Schaden durch Ertrinken zu erhalten",
+	"runes.moreore.red": "Wird verwendet, um keinen Schaden durch Feuer zu erhalten",
+	"runes.moreore.yellow": "Wird verwendet, um schneller zu graben",
+	"runes.moreore.gray": "Wird zur Reparatur anderer Runen verwendet",
+	"runes.moreore.brown": "Wird verwendet, um mehr Sättigung beim Essen zu erhalten",
+	"runes.moreore.purple": "Wird verwendet, um mehr Block drobs zu erhalten"
 }
