--- a/src/main/resources/assets/moreore/lang/en_us.json
+++ b/src/main/resources/assets/moreore/lang/en_us.json
@@ -161,5 +161,14 @@
 	"commands.tlp.failed.entity.notEnoughLevel.multiple": "Not Enough Level to Teleport %s Entities to %s",
 	"commands.tlp.failed.location.notEnoughLevel.single": "Not Enough Level to Teleport %s to %s, %s, %s",
 	"commands.tlp.failed.location.notEnoughLevel.multiple": "Not Enough Level to Teleport %s Entities to %s, %s, %s",
-	"runes.moreore.broken": "%s was broken"
+	"runes.moreore.broken": "%s was broken",
+	"runes.moreore.rainbow": "Used to craft Tools and Armor",
+	"runes.moreore.green": "Used to get more drobs of crops",
+	"runes.moreore.orange": "Used to run faster",
+	"runes.moreore.blue": "Used to get no damage of drowning",
+	"runes.moreore.red": "Used to get no damage of fire",
+	"runes.moreore.yellow": "Used to dig faster",
+	"runes.moreore.gray": "Used to repair other runes",
+	"runes.moreore.brown": "Used to get more saturation at eating",
+	"runes.moreore.purple": "Used to get more drobs of blocks"
 }
