--- a/src/main/resources/assets/moreore/lang/en_us.json
+++ b/src/main/resources/assets/moreore/lang/en_us.json
@@ -137,5 +137,5 @@
 	"commands.tlp.failed.location.notEnoughLevel.multiple": "Not Enough Level to Teleport %s Entities to %s, %s, %s",
 	"moreore.portal.dim_unaccessable": "The actually choosen dimension isn't accessable. Please choose an other one",
 	"moreore.portal.set_dest_dim": "Setted the destination Dimension to %s",
-	"moreore.portal.moreore.portal.teleported_to_dim": "You have been teleported to: %s"
+	"moreore.portal.teleported_to_dim": "You have been teleported to: %s"
 }
